# Extractor-Core

./: .gitmodules  CMakeLists.txt  LICENSE
example/: CMakeLists.txt
example/include/: ExampleApp.h
example/src/: ExampleApp.cpp  main.cpp
include/ExCore/: Application.h  EntryPoint.h  Log.h
include/ExCore/Gui/: IGuiDrawable.h  IGuiExtras.h
include/ExCore/IO/: BitStream.h  FileStream.h  IOUtils.h  Image.h  MemoryStream.h  Stream.h  ZLib.h
include/ExCore/Math/: Color24.h  Color32.h  Math.h  Matrix4f.h  Rect.h  Vertex.h
include/ExCore/Rendering/: DynamicBatch.h  ICamera.h  Renderable.h  Renderer.h  Shader.h  SortingLayer.h  Sprite.h  Texture.h  Window.h
include/ExCore/Rendering/Buffers/: BufferLayout.h  FrameBuffer.h  IndexBuffer.h  VertexArray.h  VertexBuffer.h
include/ExCore/Scene/: Component.h  Object.h  Scene.h  Time.h  Transform.h
include/ExCore/Scene/Components/: Animator.h  Camera.h  SpriteRenderer.h
include/ExCore/Util/: DataUtilities.h  EnumUtils.h  HeapVector.h  IComparable.h
src/ExCore/: Application.cpp  Log.cpp
src/ExCore/Gui/: IGuiExtras.cpp
src/ExCore/IO/: BitStream.cpp  FileStream.cpp  IOUtils.cpp  Image.cpp  MemoryStream.cpp  ZLib.cpp
src/ExCore/Math/: Color24.cpp  Color32.cpp  Math.cpp  Matrix4f.cpp
src/ExCore/Rendering/: Renderable.cpp  Renderer.cpp  Shader.cpp  Sprite.cpp  Texture.cpp  Window.cpp
src/ExCore/Rendering/Buffers/: FrameBuffer.cpp  IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
src/ExCore/Scene/: Component.cpp  Object.cpp  Scene.cpp  Transform.cpp
src/ExCore/Scene/Components/: Animator.cpp  Camera.cpp  SpriteRenderer.cpp
